gitops-main/base/infrastructure/rabbitmq/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  type: ClusterIP
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
  selector:
    app: rabbitmq

# Denne service-fil opretter et internt endpoint for RabbitMQ systemet.
# Den bruger ClusterIP, hvilket betyder at den kun er tilgængelig internt i Kubernetes clusteret.
