gitops-main/base/infrastructure/rabbitmq/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: rabbitmq
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
